duniverse/menhirLib.20200211/test/static/bad/non-terminals-tokens-overlap-simple.mly
%start<int> a
%token B
%%

a: B {}
B: {}
