duniverse/menhirLib.20200211/test/static/bad/non-terminals-tokens-overlap-simple.exp
File "non-terminals-tokens-overlap-simple.mly", line 6, characters 0-1:
File "non-terminals-tokens-overlap-simple.mly", line 2, characters 7-8:
Error: the identifier B is a reference to a token.
